--- a/main.css
+++ b/main.css
@@ -1,20 +1,39 @@
-body{
-    background-color: darkblue;
+body {
+    background-color: darkslategray;
 }
 
-footer{
+.menu_ptc {
+    position: fixed;
+    top: 34%;
+}
+
+footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: black;
+    background-color: dimgray;
     color: white;
 }
 
-.footer_icons{
+.footer_icons {
+    max-width: 300px;
+    text-align: right;
     float: right;
 }
 
-.footer_identification{
+.footer_identification {
+    display: inline;
     max-width: 100px;
+}
+
+.container_main {
+    position: fixed;
+    margin-left: 113px;
+    height: 500px;
+}
+
+.center_action {
+    height: 500px;
+    background-color: goldenrod;
 }
